# codeslayer.gdb-plugin

./: Makefile.in  configure
gdb/: configure.ac  gdb.codeslayer-plugin
gdb/.svn/: all-wcprops  entries
gdb/.svn/text-base/: Makefile.am.svn-base
gdb/src/: gdb-service.c
gdb/src/.svn/text-base/: gdb-service.h.svn-base
m4/.svn/: all-wcprops  entries
src/: Makefile.am
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.in.svn-base  gdb-plugin.c.svn-base
